[0.9.7] - Fixed SQL error in tts
        - Fixed table locking in admin -> edit account

[0.9.6] - Fix user permissions where not being checked properly.

[0.9.5] - Fixed NNTP preferences.
  		- Fixed NNTP read_message - missed converting call for VFS.
  		- Fixed calendar view of events - change of convert_string_to_names_access().
  		- Fixed deletion of user accounts hanging on deleting of calendar events.
  		- Fix for email in BIG5 charset.
  		- Fix for adding new users.
  		- Fixed a bug that was casuing people to have problems logining in when using cookie support.
  		- Fixed calendar display of 12 hour formats.
  		- Fixed a few problems with admin -> editaccount not changing the directory name properly.
  		- Fixed the languages table was using the lang name in upper case while everything else
  		  was using lowercase.
  		- Added admin section to be able to add legal notices or other messages on the main screen.
  		  Thanks snerd for this idea.
  		- Added matrix view of individuals and calendar events.
  		- Fixed parent_page link on footer line.

[0.9.4] - Fixed calendar week view.
  		- Displays calendar items in day view without start times.
  		- You now have to specify which API classes need to be loaded.
  		- Preformance is much better.
  		- Fixed a calendar SQL error with stock setups using the demo user.
  		- Fixed a problem with the email folders only reporting back the number of messages
  		  in the INBOX regardless of which folder it is in.
  		- Added calendar day view to home page.
  		- Fixed problem with deletion of accounts.
  		- Fixed a few problems with error reporting in the accounts section.
  		  Thanks mdean <mdean@kcnet.com>
  		- Renamed the webcal_entry.cal_create_by field to webcal_entry.cal_owner.
  		- Split out auth class, so that you can auth from anywhere and still store your accounts in sql or ldap.
  		- Added mail auth class, that will authenticate users against their email accounts