@@ -173,6 +173,7 @@ high	common	en	High
 home	common	en	Home
 home phone	addressbook	en	Home Phone
 human resources	common	en	Human Resources
+i participate	calendar	en	I Participate
 idle	admin	en	idle
 if applicable	email	en	If Applicable
 ignore conflict	calendar	en	Ignore Conflict
