@@ -1,5 +1,6 @@
 [0.9.7] - Fixed SQL error in tts
         - Fixed table locking in admin -> edit account
+	- Added capability to schedule others and not yourself to calendar.
 
 [0.9.6] - Fix user permissions where not being checked properly.
 
